Sforce8 Project Data/src/objects/LeadIndex__c.object
<CustomObject>
    <description>予約インデックス情報を格納する</description>
    <fields>
        <fullName>DepartureDate__c</fullName>
        <label>出発日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DepartureTime__c</fullName>
        <defaultValue>&apos;10:00&apos;</defaultValue>
        <label>出発時刻</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntryDate__c</fullName>
        <label>到着日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntryTime__c</fullName>
        <defaultValue>&apos;15:00&apos;</defaultValue>
        <description>HH:MM</description>
        <label>到着時刻</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSource__c</fullName>
        <defaultValue>&quot;FromUI&quot;</defaultValue>
        <label>発生源</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>外部システム連携用キー</description>
        <externalId>true</externalId>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nights__c</fullName>
        <label>宿泊数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rooms__c</fullName>
        <label>部屋数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>予約インデックス</label>
    <nameField>
        <displayFormat>I_{YYYY}_{0000000000}</displayFormat>
        <label>予約名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>